@@ -1,5 +1,7 @@
 package rikser123.security.config;
 
+import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -20,85 +22,78 @@ import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 import rikser123.security.filter.JwtAuthenticationFilter;
 import rikser123.security.service.UserInfoService;
 
-import java.util.Arrays;
-import java.util.List;
-
-/**
- * Конфигурация Spring Security
- *
- */
-
+/** Конфигурация Spring Security */
 @Configuration
 @EnableWebFluxSecurity
 @EnableReactiveMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfiguration {
 
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final ServerAuthenticationEntryPoint authenticationEntryPoint;
-    private final UserInfoService userService;
+  private final JwtAuthenticationFilter jwtAuthenticationFilter;
+  private final ServerAuthenticationEntryPoint authenticationEntryPoint;
+  private final UserInfoService userService;
 
-    @Bean
-    public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http, ReactiveAuthenticationManager reactiveAuthenticationManager) {
-        return http
-                .csrf(csrf -> csrf.disable())
-                .authenticationManager(reactiveAuthenticationManager)
-                .httpBasic(httpBasic -> httpBasic.disable())
-                .anonymous(anonymous -> anonymous.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeExchange(exchanges -> exchanges
-                        // Публичные endpoints
-                        .pathMatchers(
-                                "/api/v1/user/register",
-                                "/api/v1/user/login"
-                        ).permitAll()
-                        .pathMatchers(
-                                "/swagger-ui/**",
-                                "/swagger-ui.html",
-                                "/swagger-resources/**",
-                                "/v3/api-docs/**",
-                                "/webjars/**"
-                        ).permitAll()
-                        .pathMatchers("/actuator/health", "/actuator/info").permitAll()
-                        // Все остальные требуют аутентификации
-                        .anyExchange().authenticated()
-                )
-                .addFilterBefore(jwtAuthenticationFilter, SecurityWebFiltersOrder.AUTHENTICATION)
-                .exceptionHandling(handling -> handling
-                    .authenticationEntryPoint(authenticationEntryPoint)
-                )
-                .securityContextRepository(NoOpServerSecurityContextRepository.getInstance())
-                .formLogin(form -> form.disable())
-                .logout(logout -> logout.disable())
-                .build();
-    }
+  @Bean
+  public SecurityWebFilterChain securityWebFilterChain(
+      ServerHttpSecurity http, ReactiveAuthenticationManager reactiveAuthenticationManager) {
+    return http.csrf(csrf -> csrf.disable())
+        .authenticationManager(reactiveAuthenticationManager)
+        .httpBasic(httpBasic -> httpBasic.disable())
+        .anonymous(anonymous -> anonymous.disable())
+        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        .authorizeExchange(
+            exchanges ->
+                exchanges
+                    // Публичные endpoints
+                    .pathMatchers("/api/v1/user/register", "/api/v1/user/login")
+                    .permitAll()
+                    .pathMatchers(
+                        "/swagger-ui/**",
+                        "/swagger-ui.html",
+                        "/swagger-resources/**",
+                        "/v3/api-docs/**",
+                        "/webjars/**")
+                    .permitAll()
+                    .pathMatchers("/actuator/health", "/actuator/info")
+                    .permitAll()
+                    // Все остальные требуют аутентификации
+                    .anyExchange()
+                    .authenticated())
+        .addFilterBefore(jwtAuthenticationFilter, SecurityWebFiltersOrder.AUTHENTICATION)
+        .exceptionHandling(handling -> handling.authenticationEntryPoint(authenticationEntryPoint))
+        .securityContextRepository(NoOpServerSecurityContextRepository.getInstance())
+        .formLogin(form -> form.disable())
+        .logout(logout -> logout.disable())
+        .build();
+  }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        // В production замените на конкретные домены
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L); // 1 час кэширования preflight запросов
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+    // В production замените на конкретные домены
+    configuration.setAllowedOriginPatterns(List.of("*"));
+    configuration.setAllowedMethods(
+        Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+    configuration.setAllowedHeaders(List.of("*"));
+    configuration.setAllowCredentials(true);
+    configuration.setMaxAge(3600L); // 1 час кэширования preflight запросов
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration);
+    return source;
+  }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+  @Bean
+  public PasswordEncoder passwordEncoder() {
+    return new BCryptPasswordEncoder();
+  }
 
-    @Bean
-    public ReactiveAuthenticationManager reactiveAuthenticationManager(
-            PasswordEncoder passwordEncoder) {
-        UserDetailsRepositoryReactiveAuthenticationManager manager =
-                new UserDetailsRepositoryReactiveAuthenticationManager(userService.userDetailsService());
-        manager.setPasswordEncoder(passwordEncoder);
-        return manager;
-    }
+  @Bean
+  public ReactiveAuthenticationManager reactiveAuthenticationManager(
+      PasswordEncoder passwordEncoder) {
+    UserDetailsRepositoryReactiveAuthenticationManager manager =
+        new UserDetailsRepositoryReactiveAuthenticationManager(userService.userDetailsService());
+    manager.setPasswordEncoder(passwordEncoder);
+    return manager;
+  }
 }
